# project-template-python

./: .gitattributes  .gitignore  AGENTS.md  CHANGELOG.md  README.md  pyproject.toml
.github/ci/bandit/: pyproject.toml
.github/ci/importlinter/: pyproject.toml
.github/ci/mypy/: pyproject.toml
.github/ci/pytest/: .gitignore  pyproject.toml
.github/ci/ruff/: pyproject.toml
.github/workflows/: ci.yml  create-version-branch.yml  release-new-version.yml  update-dependencies.yml
src/valkyrja/template/constant/: template_info.py
tests/: conftest.py
tests/abstract/: __init__.py  template_test_case.py
tests/unit/: test_template_info.py
