[project]
name = "valkyrja-template-ci-mypy"
version = "0.0.0"
requires-python = ">=3.14"
dependencies = ["mypy>=1.13"]

[tool.uv]
# Environment-only project: install the tool, never build this directory.
package = false

[tool.mypy]
python_version = "3.14"
strict = true
warn_unused_configs = true
warn_redundant_casts = true
# PEP 420 namespace package: `valkyrja` has no __init__.py, so mypy needs
# namespace mode with `src` as the explicit package base.
namespace_packages = true
explicit_package_bases = true
mypy_path = "src"
