[project]
name = "valkyrja-template-ci-ruff"
version = "0.0.0"
requires-python = ">=3.14"
dependencies = ["ruff>=0.9"]

[tool.uv]
# Environment-only project: install the tool, never build this directory.
package = false

[tool.ruff]
line-length = 120
target-version = "py314"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.ruff.lint]
# Security ("S") is intentionally left to the dedicated Bandit tool.
select = ["E", "F", "I", "N", "UP", "B", "C4", "SIM", "RUF"]
